# musicnya-desktop

./: .eslintrc.json  .gitignore  README.md  angular.json  app.js  go.mod  jsconfig.json  main.cjs  main.go  migrations.json  nx.json  package-lock.json  package.json  preload.cjs  preload.js  shell.nix  svelte.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts  wails.json  yarn.nix
docs/: 105.3df53b839ab8ba4c.js  105.875f519628b56b6e.js  105.9aab068ef3fe30af.js  105.b9da39ca66d3e810.js  105.cd040c71b39d9bc1.js  105.ed5ae413e493afab.js  176.265d115645333bf7.js  176.469cc3ab3c54bbad.js  176.614215641d38381d.js  176.9963b9aded79c5e4.js  176.be0130e574652da6.js  176.e84bc389e2d1a195.js  177.8debfea907b93d23.js  199.009047c4e67be549.js  199.0901075b5d7ff2b5.js  199.168599f9f1ae40ba.js  199.563d9f36584fff40.js  199.7a06fa933ee90896.js  199.fd072d53d6e3a248.js  290.d62fcfae05d4208c.js  32.0cbf88c87c4a4ff9.js  32.1d913304028b8ec1.js  32.50d503604c15cf31.js  32.cf5c92a20fe8e684.js  32.e1c3ba23cc042dbf.js  32.f0f0560d7f04a5b1.js  368.8c102b9f36d43352.js  368.8e1e1e17a309839a.js  3rdpartylicenses.txt  462.1586e2fc01f16dd3.js  462.3e27bc7282a2d763.js  462.4c56d427d564c5b7.js  462.d69b5e6852196efb.js  462.dfc678d34b588905.js  462.e7794421fd893b4c.js  464.12961281da8f934a.js  464.2d20cd49049e46e8.js  464.86c95ec63dac35f6.js  464.fdf585c2102c98d5.js  620.376cfebd19e252e8.js  (+71 more)
environments/: environment.dev.json  environment.prod.json
frontend/: tsconfig.base.json
libs/nyan_core/: Cargo.toml  rust-toolchain
libs/nyan_core/src/: main.rs
scripts/: setenv.ts
(+821 files in other folders)
